fix: clamp overflow text

--- a/src/app/client/modules/documents/modules/new-documents-views-drawer/new-documents-views-drawer.component.scss
+++ b/src/app/client/modules/documents/modules/new-documents-views-drawer/new-documents-views-drawer.component.scss
@@ -1,4 +1,9 @@
 @import 'src/styles/helpers/icon_tools';
+@import 'src/styles/_typography.vars.scss';
+
+.header h4 {
+	@include text-overflow(1);
+}
 
 mib-avatar[type='round'] {
 	@include icon-size(20px);
